--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>Josh Jones</h1>
-	<p>This is the portfolio of Josh Jones</p>
+	<p>This is the portfolio of Josh Jones!</p>
 </body>
 </html>
