--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -4,8 +4,16 @@
 	<title>Josh Jones</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body>	
 	<h1>Josh Jones</h1>
-	<p>This is the portfolio of Josh Jones!</p>
+	<p>I’m a designer fascinated by
+stories. Finding the best way
+to tell a story is my passion.
+I’m a team player, I believe the
+best storytelling comes from
+collaboration.</p>
+	<p>In my free time I enjoy rock
+climbing, reading, and trying
+new craft beers. </p>
 </body>
 </html>
