--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>	
-	<h1>Josh Jones</h1>
+	<h1>Josh Jones!</h1>
 	<p>I’m a designer fascinated by
 stories. Finding the best way
 to tell a story is my passion.
