pics downsize, new font

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -13,9 +13,9 @@ I’m a team player, I believe the
 best storytelling comes from
 collaboration.</p>
 	<p>In my free time I enjoy rock climbing, reading, and trying new craft beers. </p>
-	<h5>Resume</h5>
-	<h5>Contact</h5>
-	<h5>About</h5>
+	<h5><a href="images/Resume.pdf">Resume</a></h5>
+	<h5><a href="mailto: fakeemail@fakeemail.com">Contact</a></h5>
+	<h5><a href="#">About</a></h5>
 	<img src="images/Franken.jpg" alt="Franken Resigns" title="Franken Resigns">
 	<h3>News</h3>
 	<img src="images/Vote.jpg" alt="Election Guide" title="Election Guide">
@@ -28,9 +28,9 @@ collaboration.</p>
 	<h3>Winter Olympics 2018</h3>
 	<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
 	<h3>Business</h3>
-	<p>Instagram</p>
-	<p>LinkedIn</p>
-	<p>Email</p>
+	<h5><a href="https://www.instagram.com/joshljones6">Instagram</a></h5>
+	<h5><a href="https://www.linkedin.com/in/josh-jones-5053946b">LinkedIn</a></h5>
+	<h5><a href="mailto: fakeemail@fakeemail.com">Email</a></h5>
 
 
 
