--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,34 +5,53 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>	
-	<h1>Josh Jones</h1>
-	<p>I’m a designer fascinated by
-stories. Finding the best way
-to tell a story is my passion.
-I’m a team player, I believe the
-best storytelling comes from
-collaboration.</p>
-	<p>In my free time I enjoy rock climbing, reading, and trying new craft beers. </p>
-	<h5><a href="images/Resume.pdf">Resume</a></h5>
-	<h5><a href="mailto: fakeemail@fakeemail.com">Contact</a></h5>
-	<h5><a href="#">About</a></h5>
-	<img src="images/Franken.jpg" alt="Franken Resigns" title="Franken Resigns">
-	<h3>News</h3>
-	<img src="images/Vote.jpg" alt="Election Guide" title="Election Guide">
-	<h3> Election Guide </h3>
-	<img src="images/Hamilton.jpg" alt="Hamilton vs. Jefferson" title="Hamilton vs. Jerfferson">
-	<h3> Opinion </h3>
-	<img src="images/Visionaries.jpg" alt="Visionaries in Science" title="Visionaries in Science">
-	<h3>Science & Health</h3>
-	<img src="images/Gold_Rush.jpg" alt="Gold Rush" title="Gold Rush">
-	<h3>Winter Olympics 2018</h3>
-	<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
-	<h3>Business</h3>
-	<h5><a href="https://www.instagram.com/joshljones6">Instagram</a></h5>
-	<h5><a href="https://www.linkedin.com/in/josh-jones-5053946b">LinkedIn</a></h5>
-	<h5><a href="mailto: fakeemail@fakeemail.com">Email</a></h5>
-
-
-
+	<nav>
+		<a href="images/Resume.pdf" target="_blank">Resume</a>
+		<a href="mailto:fakeemail@fakeemail.com">Contact</a>
+		<a href="#">About</a>
+	</nav>
+	<section id="intro">
+		<h1>Josh Jones</h1>
+		<p>I’m a designer fascinated by stories. Finding the best way to tell a story is my passion. I’m a team player, I believe the best storytelling comes from collaboration.</p>
+	</section>
+	<section id="services">
+	</section>
+	<section id="work">
+		<h2>My work</h2>
+		<div>
+			<img src="images/Franken.jpg" alt="Franken Resigns" title="Franken Resigns">
+			<h3>News</h3>
+		</div>
+		<div>
+			<img src="images/Vote.jpg" alt="Election Guide" title="Election Guide">
+			<h3> Election Guide </h3>
+		</div>
+		<div>
+			<img src="images/Hamilton.jpg" alt="Hamilton vs. Jefferson" title="Hamilton vs. Jerfferson">
+			<h3> Opinion </h3>
+		</div>
+		<div>
+			<img src="images/Visionaries.jpg" alt="Visionaries in Science" title="Visionaries in Science">
+			<h3>Science & Health</h3>
+		</div>
+		<div>
+			<img src="images/Gold_Rush.jpg" alt="Gold Rush" title="Gold Rush">
+			<h3>Winter Olympics 2018</h3>
+		</div>
+		<div>
+			<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
+			<h3>Business</h3>
+		</div>
+	</section>
+	<section id="about">
+		<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
+		<h2>Josh</h2>
+		<p>In my free time I enjoy rock climbing, reading, and trying new craft beers. </p>
+	</section>
+	<footer>
+		<a href="https://www.instagram.com/joshljones6">Instagram</a>
+		<a href="https://www.linkedin.com/in/josh-jones-5053946b">LinkedIn</a>
+		<a href="mailto: fakeemail@fakeemail.com">Email</a>
+	</footer>
 </body>
 </html>
