Unit_4 creation and edit

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -12,9 +12,16 @@
 	</nav>
 	<section id="intro">
 		<h1>Josh Jones</h1>
-		<p>I’m a designer fascinated by stories. Finding the best way to tell a story is my passion. I’m a team player, I believe the best storytelling comes from collaboration.</p>
+		<p>I’m a print designer fascinated by stories. Finding the best way to tell a story is my passion. </p>
+		<p>I’m a team player, I believe the best storytelling comes from collaboration.</p>
 	</section>
-	<section id="services">
+	<section id="services">	
+		<a href="#">News</a>
+		<a href="#">Election Guide</a>
+		<a href="#">Opinion</a>
+		<a href="#">Science & Health</a>
+		<a href="#">Winter Olympics</a>
+		<a href="#">Business</a>
 	</section>
 	<section id="work">
 		<h2>My work</h2>
@@ -45,7 +52,7 @@
 	</section>
 	<section id="about">
 		<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
-		<h2>Josh</h2>
+		<h2>About me</h2>
 		<p>In my free time I enjoy rock climbing, reading, and trying new craft beers. </p>
 	</section>
 	<footer>
