Taking off Resume.pdfs in unit 3 and 4

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>	
 	<nav>
-		<a href="images/Resume.pdf" target="_blank">Resume</a>
+		<a href="#" target="_blank">Resume</a>
 		<a href="mailto:fakeemail@fakeemail.com">Contact</a>
 		<a href="#">About</a>
 	</nav>
