--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>	
 	<nav>
-		<a class="nav" href="#" target="_blank">Resume</a>•
+		<a class="main_nav" href="#" target="_blank">Work</a>
 		<a class="nav" href="mailto:fakeemail@fakeemail.com">Contact</a>•
 		<a class="nav" href="#">About</a>
 	</nav>
