save before redoing css

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,11 +6,10 @@
 </head>
 <body>	
 	<nav>
-		<a class="main_nav" href="#" target="_blank">Work</a>
+		<a class="main_nav" href="#" target="_blank">Work</a>•
 		<a class="nav" href="mailto:fakeemail@fakeemail.com">Contact</a>•
 		<a class="nav" href="#">About</a>
 	</nav>
-	<hr>
 	<section id="intro">
 		<h1>Josh Jones</h1>
 		<p>I’m a designer fascinated by stories. I specialize in everything print design. From photo editing, graphics, to conceptual illustrations, I'm your guy. </p>
@@ -26,7 +25,7 @@
 		<a class="topic" href="#">Business</a>
 	</section> -->
 	<section id="work">
-		<h2>My work</h2>
+		<h2>Work</h2>
 		<div>
 			<img src="images/Franken.jpg" alt="Franken Resigns" title="Franken Resigns">
 			<h3>News</h3>
