--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -2,17 +2,20 @@
 <html>
 <head>
 	<title>Josh Jones</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style1.css">
+	<link rel="icon" href="images/icon.png" type="image/png" sizes="16x16">
 </head>
 <body>	
 	<nav>
-		<a class="main_nav" href="#" target="_blank">Work</a>•
-		<a class="nav" href="mailto:fakeemail@fakeemail.com">Contact</a>•
-		<a class="nav" href="#">About</a>
+		<a href="#" target="_blank">Work</a>•
+		<a href="mailto:fakeemail@fakeemail.com">Contact</a>•
+		<a href="#">About</a>
 	</nav>
 	<section id="intro">
 		<h1>Josh Jones</h1>
-		<p>I’m a designer fascinated by stories. I specialize in everything print design. From photo editing, graphics, to conceptual illustrations, I'm your guy. </p>
+		<p>I’m a news designer dedicated to telling stories.</p>
+		<p> <a class="links" href="#">Art direction</a>, <a class="links" href="#">social media assets</a>, <a class="links" href="#">illustration</a>, <a class="links" href="#">
+		graphics</a>. I'm your guy. </p>
 		<p>I’m a team player, I believe the best storytelling comes from collaboration.</p>
 	</section>
 	<!-- <hr>
@@ -54,7 +57,9 @@
 	<section id="about">
 		<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
 		<h2>About me</h2>
-		<p>In my free time I enjoy rock climbing, reading, and trying new craft beers. </p>
+		<p>Hailing from the suburbs of St. Paul, I now get to design for the paper I grew up reading, <a href="https://www.startribune.com" target="_blank">the Star Tribune</a>. </p>
+		<p>I received a Bachelor's degree from the University of Minnesota's School of Journalism. My emphasis was visual journalism, with a minor in art.</p>
+		<p>I like rock climbing and cats, but not climbing cats. I like enjoy craft beer, and hot coffee (no cream or sugar, please.)</p>
 	</section>
 	<footer>
 		<a href="https://www.instagram.com/joshljones6">Instagram</a>
