update with pic

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -55,7 +55,7 @@
 		</div>
 	</section>
 	<section id="about">
-		<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
+		<img src="images/me.jpg" alt="Josh Jones" title="Josh Jones">
 		<h2>About me</h2>
 		<p>Hailing from the suburbs of St. Paul, I now get to design for the paper I grew up reading, <a href="https://www.startribune.com" target="_blank">the Star Tribune</a>. </p>
 		<p>I received a Bachelor's degree from the University of Minnesota's School of Journalism. My emphasis was visual journalism, with a minor in art.</p>
