take out condensed in CSS

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -45,7 +45,7 @@
 			<img src="images/Visionaries.jpg" alt="Visionaries in Science" title="Visionaries in Science">
 			<h3>Science & Health</h3>
 		</div>
-		<di>
+		<div>
 			<img src="images/Gold_Rush.jpg" alt="Gold Rush" title="Gold Rush">
 			<h3>Winter Olympics 2018</h3>
 		</div>
@@ -64,7 +64,7 @@
 	<footer>
 		<a href="https://www.instagram.com/joshljones6">Instagram</a>
 		<a href="https://www.linkedin.com/in/josh-jones-5053946b">LinkedIn</a>
-		<a href="mailto: fakeemail@fakeemail.com">Email</a>
+		<a href="mailto:fakeemail@fakeemail.com">Email</a>
 	</footer>
 </body>
 </html>
