--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>	
 	<nav>
-		<a href="#" target="_blank">Work</a>•
-		<a href="mailto:fakeemail@fakeemail.com">Contact</a>•
+		<a href="#" target="_blank">Work</a> •
+		<a href="mailto:fakeemail@fakeemail.com">Contact</a> •
 		<a href="#">About</a>
 	</nav>
 	<section id="intro">
@@ -30,31 +30,32 @@
 	</section> -->
 	<section id="work">
 		<h2>Work</h2>
-			<div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'>
+		<div class="grid">
 			<div class="grid-item grid-item--width2">
 				<img src="images/Franken.jpg" alt="Franken Resigns" title="Franken Resigns">
 				<h3>News</h3>
-			</div class="grid-item grid-item--width2">
+			</div>
 			<div class="grid-item grid-item--width2">
-				<img src="images/Vote.jpg" alt="Election Guide"title="Election Guide">
+				<img src="images/Vote.jpg" alt="Election Guide" title="Election Guide">
 				<h3> Election Guide </h3>
-			</div class="grid-item grid-item--width2">
+			</div>
 			<div class="grid-item grid-item--width2">
 				<img src="images/Hamilton.jpg" alt="Hamilton vs. Jefferson" title="Hamilton vs. Jerfferson">
 				<h3> Opinion </h3>
-			</div class="grid-item grid-item--width2">
+			</div>
 			<div class="grid-item grid-item--width2">
 				<img src="images/Visionaries.jpg" alt="Visionaries in Science" title="Visionaries in Science">
 				<h3>Science & Health</h3>
-			</div class="grid-item grid-item--width2">
+			</div>
 			<div class="grid-item grid-item--width2">
 				<img src="images/Gold_Rush.jpg" alt="Gold Rush" title="Gold Rush">
 				<h3>Winter Olympics 2018</h3>
-			</div class="grid-item grid-item--width2">
+			</div>
 			<div class="grid-item grid-item--width2">
 				<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
 				<h3>Business</h3>
-			</div class="grid-item grid-item--width2">
+			</div>
+		</div>
 	</section>
 	<section id="about">
 		<img src="images/me.jpg" alt="Josh Jones" title="Josh Jones">
@@ -68,5 +69,19 @@
 		<a href="https://www.linkedin.com/in/josh-jones-5053946b">LinkedIn</a>
 		<a href="mailto:fakeemail@fakeemail.com">Email</a>
 	</footer>
+	<script>
+		var elem = document.querySelector('.grid');
+		var msnry = new Masonry( elem, {
+			  // options
+			  itemSelector: '.grid-item',
+			  columnWidth: 200
+			});
+
+			// element argument can be a selector string
+			//   for an individual element
+			var msnry = new Masonry( '.grid', {
+			  // options
+		});
+	</script>
 </body>
 </html>
