--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -31,27 +31,27 @@
 	<section id="work">
 		<h2>Work</h2>
 		<div class="grid">
-			<div class="grid-item grid-item--width2">
+			<div class="grid-item">
 				<img src="images/Franken.jpg" alt="Franken Resigns" title="Franken Resigns">
 				<h3>News</h3>
 			</div>
-			<div class="grid-item grid-item--width2">
+			<div class="grid-item">
 				<img src="images/Vote.jpg" alt="Election Guide" title="Election Guide">
 				<h3> Election Guide </h3>
 			</div>
-			<div class="grid-item grid-item--width2">
+			<div class="grid-item">
 				<img src="images/Hamilton.jpg" alt="Hamilton vs. Jefferson" title="Hamilton vs. Jerfferson">
 				<h3> Opinion </h3>
 			</div>
-			<div class="grid-item grid-item--width2">
+			<div class="grid-item">
 				<img src="images/Visionaries.jpg" alt="Visionaries in Science" title="Visionaries in Science">
 				<h3>Science & Health</h3>
 			</div>
-			<div class="grid-item grid-item--width2">
+			<div class="grid-item">
 				<img src="images/Gold_Rush.jpg" alt="Gold Rush" title="Gold Rush">
 				<h3>Winter Olympics 2018</h3>
 			</div>
-			<div class="grid-item grid-item--width2">
+			<div class="grid-item">
 				<img src="images/Trump_Factor.jpg" alt="The Trump Factor" title="The Trump Factor">
 				<h3>Business</h3>
 			</div>
