--- a/unit_7/index.html
+++ b/unit_7/index.html
@@ -22,39 +22,41 @@
 	<section id="work">
 		<h2>Work</h2>
 		<div id="center_contain">
-			<div class="float">
+			<div class="content">
 				<img src="images/Franken.jpg" alt="Photo of Star Tribune Cover when Senator Al Franken Resigned in 2017" title="Franken Resigns">
 				<h3>News</h3>
 			</div>
-			<div class="float">
+			<div class="content">
 				<img src="images/Vote.jpg" alt="Photo of Star Tribune 2018 Election Guide Cover"title="Election Guide">
 				<h3> Election Guide </h3>
 			</div>
-			<div class="float">
+			<div class="content">
 				<img src="images/Hamilton.jpg" alt="Photo of Star Tribune Opinion cover featuring commentary on Hamilton and Jerfferson" title="Hamilton vs. Jerfferson">
 				<h3> Opinion </h3>
 			</div>
-			<div class="float">
+			<div class="content">
 				<img src="images/Visionaries.jpg" alt="Photo of Star Tribune Science and Health cover featuring visionaries in science" title="Visionaries in Science">
 				<h3>Science & Health</h3>
 			</div>
-			<div class="float">
+			<div class="content">
 				<img src="images/Diggins.jpg" alt="Photo of Star Tribune 2018 Olympics Preview cover of Jessie Diggins" title="Olympics 2018 Preview">
 				<h3>Winter Olympics 2018</h3>
 			</div>
-			<div class="float">
+			<div class="content">
 				<img src="images/Trump_Factor.jpg" alt="Photo of Star Tribune Business cover when stock prices were affected after President Trump's comments on North Korea" title="The Trump Factor">
 				<h3>Business</h3>
 			</div>
 		</div>
 	</section>
 	<section id="about">
-		<img src="images/me.jpg" alt="Headshot of Josh Jones" title="Josh Jones">
+		<div class="content_about">
+			<img src="images/me.jpg" alt="Headshot of Josh Jones" title="Josh Jones">
+		</div>
 		<div id="about_text">
 			<h2 id="h2_nopad">About me</h2>
-			<p>Hailing from the suburbs of St. Paul, I now get to design for the paper I grew up reading, <a href="https://www.startribune.com" target="_blank">the Star Tribune</a>. </p>
-			<p>I received a Bachelor's degree from the University of Minnesota's School of Journalism. My emphasis was visual journalism, with a minor in art.</p>
-			<p>I like rock climbing and cats, but not climbing cats. I enjoy craft beer, and hot coffee (no cream or sugar, please.)</p>
+			<p class="about_p">Hailing from the suburbs of St. Paul, I now get to design for the paper I grew up reading, <a href="https://www.startribune.com" target="_blank">the Star Tribune</a>. </p>
+			<p class="about_p">I received a Bachelor's degree from the University of Minnesota's School of Journalism. My emphasis was visual journalism, with a minor in art.</p>
+			<p class="about_p">I like rock climbing and cats, but not climbing cats. I enjoy craft beer, and hot coffee (no cream or sugar, please.)</p>
 		</div>
 	</section>
 	<footer>
