step before adding sections

--- a/unit_7/index.html
+++ b/unit_7/index.html
@@ -13,10 +13,9 @@
 	</nav>
 	<section id="intro">
 		<h1>Josh Jones</h1>
-		<p>I’m a news designer dedicated to telling stories.</p>
-		<p> <a class="links" href="#">Art direction</a>, <a class="links" href="#">social media assets</a>, <a class="links" href="#">illustration</a>, <a class="links" href="#">
-		graphics</a>. I'm your guy. </p>
-		<p>I’m a team player, I believe the best storytelling comes from collaboration.</p>
+		<p class="big_p">I’m a news designer dedicated to telling stories.</p>
+		<p><a class="links" href="#">Art direction</a>, <a class="links" href="#">social media assets</a>, <a class="links" href="#">illustration</a>, <a class="links" href="#">
+		graphics</a>: I'm your guy. I’m a team player, I believe the best storytelling comes from collaboration.</p>
 	</section>
 	
 	<section id="work">
@@ -28,7 +27,7 @@
 			</div>
 			<div class="content">
 				<img src="images/Vote.jpg" alt="Photo of Star Tribune 2018 Election Guide Cover"title="Election Guide">
-				<h3> Election Guide </h3>
+				<h3> Elections </h3>
 			</div>
 			<div class="content">
 				<img src="images/Hamilton.jpg" alt="Photo of Star Tribune Opinion cover featuring commentary on Hamilton and Jerfferson" title="Hamilton vs. Jerfferson">
@@ -49,9 +48,7 @@
 		</div>
 	</section>
 	<section id="about">
-		<div class="content_about">
-			<img src="images/me.jpg" alt="Headshot of Josh Jones" title="Josh Jones">
-		</div>
+		<img class="content" src="images/me.jpg" alt="Headshot of Josh Jones" title="Josh Jones">
 		<div id="about_text">
 			<h2 id="h2_nopad">About me</h2>
 			<p class="about_p">Hailing from the suburbs of St. Paul, I now get to design for the paper I grew up reading, <a href="https://www.startribune.com" target="_blank">the Star Tribune</a>. </p>
