--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -4,6 +4,7 @@
 	<title>Josh Jones</title>
 	<link rel="stylesheet" type="text/css" href="css/style1.css">
 	<link rel="icon" href="images/icon.png" type="image/png" sizes="16x16">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>	
 	<nav>
@@ -19,7 +20,7 @@
 	</section>
 	
 	<section id="work">
-		<h2>Work</h2>
+		<h2>News</h2>
 		<div id="center_contain">
 			<div class="content">
 				<img src="images/Franken.jpg" alt="Photo of Star Tribune Cover when Senator Al Franken Resigned in 2017" title="Franken Resigns">
@@ -40,6 +41,9 @@
 			<div class="content">
 				<img src="images/Diggins.jpg" alt="Photo of Star Tribune 2018 Olympics Preview cover of Jessie Diggins" title="Olympics 2018 Preview">
 				<h3>Winter Olympics 2018</h3>
+			</div>
+			<div class="content">
+				<h4 class="burst-12" class="clearfix"> See more</h4>
 			</div>
 			<div class="content">
 				<img src="images/Trump_Factor.jpg" alt="Photo of Star Tribune Business cover when stock prices were affected after President Trump's comments on North Korea" title="The Trump Factor">
