--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -20,7 +20,7 @@
 	</section>
 	
 	<section id="work">
-		<h2>News</h2>
+		<h2>Work</h2>
 		<div id="center_contain">
 			<div class="content">
 				<img src="images/Franken.jpg" alt="Photo of Star Tribune Cover when Senator Al Franken Resigned in 2017" title="Franken Resigns">
@@ -41,9 +41,6 @@
 			<div class="content">
 				<img src="images/Diggins.jpg" alt="Photo of Star Tribune 2018 Olympics Preview cover of Jessie Diggins" title="Olympics 2018 Preview">
 				<h3>Winter Olympics 2018</h3>
-			</div>
-			<div class="content">
-				<h4 class="burst-12" class="clearfix"> See more</h4>
 			</div>
 			<div class="content">
 				<img src="images/Trump_Factor.jpg" alt="Photo of Star Tribune Business cover when stock prices were affected after President Trump's comments on North Korea" title="The Trump Factor">
