--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="css/style1.css">
 	<link rel="icon" href="images/icon.png" type="image/png" sizes="16x16">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.css" />
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.js"></script>
+
 </head>
 <body>	
 	<nav>
@@ -23,7 +27,9 @@
 		<h2>Work</h2>
 		<div id="center_contain">
 			<div class="content">
+				<a data-fancybox="gallery" href="images/Franken.jpg">
 				<img src="images/Franken.jpg" alt="Photo of Star Tribune Cover when Senator Al Franken Resigned in 2017" title="Franken Resigns">
+			</a>
 				<h3>News</h3>
 			</div>
 			<div class="content">
